Cleaning up filenames. Changed Makefile. Will try Fortran stdlib hashmaps

--- a/gillespie_inversion/Makefile
+++ b/gillespie_inversion/Makefile
@@ -12,11 +12,12 @@ RM := rm -f
 # Directories
 SRC := src
 MODDIR := ../common
+STDDIR := ../common
 BINDIR := bin
 
 # Compiler and flags
 FC := gfortran
-FFLAGS := -O3 -fopenmp -I$(MODDIR) -J$(BINDIR)
+FFLAGS := -O3 -fopenmp -I$(MODDIR) -I$(STDDIR) -J$(BINDIR)
 LD := $(FC)
 LDFLAGS := -O3 -fopenmp
 LDLIBS :=
@@ -27,14 +28,26 @@ MODS := kind_parameters.f90 \
 	stochastics.f90 \
 	utilities.f90
 
-PROGS := inversion_cascade_1.f90 \
-	read_binary.f90 \
-	single_path_3D.f90 \
-	single_path_3D_discrete.f90 \
-        cascade_2_benchmark.f90 \
-        trace_cascade_2.f90
+STDS := stdlib_kinds.f90 \
+	stdlib_hashmaps.f90 \
+	stdlib_hashmap_wrappers.f90 \
+	stdlib_hash_32bit.f90 \
+	stdlib_hashmap_chaining.f90 \
+	stdlib_hashmap_open.f90 \
+	stdlib_hash_32bit_fnv.f90 \
+	stdlib_hash_32bit_nm.f90 \
+	stdlib_hash_32bit_water.f90
+
+PROGS := inversion_cascade_1D.f90 \
+	inversion_cascade_3D.f90 \
+	read_binary.f90
+	# single_path_3D.f90 \
+	# single_path_3D_discrete.f90 \
+        # cascade_2_benchmark.f90 \
+        # trace_cascade_2.f90
 
 MODOBJS := $(MODS:%.f90=$(MODDIR)/%.o)
+STDOBJS := $(STDS:%.f90=$(STDDIR)/%.o)
 PROGOBJS := $(PROGS:%.f90=$(SRC)/%.o)
 TARGETS := $(PROGS:.f90=)
 
@@ -57,7 +70,10 @@ $(SRC)/%.o: $(SRC)/%.f90 $(MODOBJS)
 # All targets
 all: $(TARGETS)
 
-inversion_cascade_1: $(MODOBJS) src/inversion_cascade_1.o
+inversion_cascade_1D: $(MODOBJS) src/inversion_cascade_1D.o
+	$(FC) $(FFLAGS) -o $@ $^
+
+inversion_cascade_3D: $(MODOBJS) $(STDOBJS) src/inversion_cascade_3D.o
 	$(FC) $(FFLAGS) -o $@ $^
 
 read_binary: $(MODOBJS) $(SRC)/read_binary.o
@@ -65,13 +81,19 @@ read_binary: $(MODOBJS) $(SRC)/read_binary.o
 
 # Program dependencies (ensure all the necessary .o files are there before trying to link)
 $(SRC)/read_binary.o:
-$(SRC)/inversion_cascade_1.o: $(MODOBJS)
+$(SRC)/inversion_cascade_1D.o: $(MODOBJS) $(STDOBJS)
 
 # Module dependencies
 $(MODDIR)/randf.o: $(MODDIR)/kind_parameters.o
 $(MODDIR)/stochastics.o: $(MODDIR)/randf.o $(MODDIR)/kind_parameters.o
 $(MODDIR)/utilities.o: $(MODDIR)/kind_parameters.o
 
+# stdlib dependencies
+$(STDDIR)/stdlib_hashmaps.o: $(STDDIR)/stdlib_kinds.o $(STDDIR)/stdlib_hashmap_wrappers.o
+$(STDDIR)/stdlib_hashmap_wrappers.o: $(STDDIR)/stdlib_hash_32bit.o $(STDDIR)/stdlib_kinds.o
+$(STDDIR)/stdlib_hash_32bit.o: $(STDDIR)/stdlib_kinds.o
+$(STDDIR)/stdlib_hashmap_open.f90.o: $(STDDIR)/stdlib_hashmap_wrappers.o
+
 # Clean up build files
 clean:
-	$(RM) $(MODOBJS) $(PROGOBJS) $(TARGETS) $(BINDIR)/*.mod
+	$(RM) $(MODOBJS) $(STDOBJS) $(PROGOBJS) $(TARGETS) $(BINDIR)/*.mod
