Did some spring cleaning on autocovariance stuff. Makefile has been overhauled to match the gillespie inversion methods. The commonly used autocovariance programs have been updated to be up to standards. Ex. now use the common modules rather than their own hiding in src. Also updated to use the common subroutines and functions, rather than the ones in src/.

--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,7 @@ doc/
 *.f90.o
 *.dat
 *.o
-# Fortran output files
+# Fortran output files. (If they were important I would have named them.)
 fort.*
+# Unignore res scripting.
+!res/*.py
